retrain models with new train and test data

--- a/model_training/memory_prediction_dnn.ipynb
+++ b/model_training/memory_prediction_dnn.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -86,23 +86,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Training data shape: (1059, 22)\n",
-            "Target scaler mean: 76030.06610009442\n",
-            "Target scaler scale: 65294.42703903871\n"
+            "Training data shape: (1039, 21)\n",
+            "Target scaler mean: 70735.3532242541\n",
+            "Target scaler scale: 63897.676863767854\n"
           ]
         }
       ],
       "source": [
         "\n",
         "# Load and preprocess data\n",
-        "data = pd.read_csv('data/memory_training_data.csv')\n",
+        "data = pd.read_csv('data/training_data.csv')\n",
         "features, memory_target, time_target = data_preprocessing(data)\n",
         "\n",
         "# Fit scalers on training data (correct approach)\n",
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -205,24 +205,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7/7 [==============================] - 0s 460us/step\n",
-            "7/7 [==============================] - 0s 446us/step\n",
-            "7/7 [==============================] - 0s 442us/step\n",
-            "7/7 [==============================] - 0s 453us/step\n",
-            "7/7 [==============================] - 0s 429us/step\n",
-            "MSE scores per fold normalized: [0.0007889527649378372, 0.00036701755595519814, 0.00014318278126069915, 6.676668295265827e-05, 0.00013849572887092546]\n",
-            "Average MSE normalized: 0.0003008831027954636\n",
-            "Average RMSE normalized: 0.12285443784605551\n",
-            "MSE scores per fold denormalized: [3363591.4235578575, 1564728.313544939, 610439.9069231141, 284650.7363911035, 590456.193915923]\n",
-            "Average MSE denormalized: 1282773.3148665875\n",
-            "Average RMSE denormalized: 31.392714056980964\n"
+            "7/7 [==============================] - 0s 2ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 2ms/step\n",
+            "7/7 [==============================] - 0s 3ms/step\n",
+            "MSE scores per fold normalized: [0.0009477299459771471, 0.00027440147571780604, 0.0002512071505748038, 0.00025805398463400113, 0.00021089908371480743]\n",
+            "Average MSE normalized: 0.00038845832812371315\n",
+            "Average RMSE normalized: 0.13546204780898727\n",
+            "MSE scores per fold denormalized: [3869500.613999293, 1120356.630235452, 1025656.1397250616, 1053609.966537934, 861085.5268348289]\n",
+            "Average MSE denormalized: 1586041.775466514\n",
+            "Average RMSE denormalized: 34.24208320434995\n"
           ]
         }
       ],
@@ -233,24 +233,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7/7 [==============================] - 0s 681us/step\n",
-            "7/7 [==============================] - 0s 489us/step\n",
-            "7/7 [==============================] - 0s 439us/step\n",
-            "7/7 [==============================] - 0s 775us/step\n",
-            "7/7 [==============================] - 0s 509us/step\n",
-            "MSE scores per fold normalized: [0.0010402829765146825, 0.0010685254869958237, 0.0016953465766645537, 0.0009949916146329337, 0.0015583454213635634]\n",
-            "Average MSE normalized: 0.0012714984152343112\n",
-            "Average RMSE normalized: 0.18791938442104478\n",
-            "MSE scores per fold denormalized: [5965903.668121852, 6127874.85558521, 9722620.803918969, 5706162.568171195, 8936939.812908104]\n",
-            "Average MSE denormalized: 7291900.3417410655\n",
-            "Average RMSE denormalized: 51.713365604732324\n"
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "MSE scores per fold normalized: [0.0007488197519334065, 0.0003492657275182174, 0.00043118573551030614, 0.0001696568661155276, 0.0001444574494359142]\n",
+            "Average MSE normalized: 0.0003686771061026743\n",
+            "Average RMSE normalized: 0.1339978256278141\n",
+            "MSE scores per fold denormalized: [3057370.0879063974, 1426019.6726177656, 1760498.2387144016, 692691.6316181513, 589805.6560459413]\n",
+            "Average MSE denormalized: 1505277.0573805314\n",
+            "Average RMSE denormalized: 33.87195255474952\n"
           ]
         }
       ],
@@ -261,52 +261,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7/7 [==============================] - 0s 475us/step\n",
-            "7/7 [==============================] - 0s 447us/step\n",
-            "7/7 [==============================] - 0s 464us/step\n",
-            "7/7 [==============================] - 0s 434us/step\n",
-            "7/7 [==============================] - 0s 459us/step\n",
-            "MSE scores per fold normalized: [0.0008439689618510299, 0.0003287063959296532, 0.00013910883427778673, 7.785796768343372e-05, 1.2098889432348258e-05]\n",
-            "Average MSE normalized: 0.0002803482098348504\n",
-            "Average RMSE normalized: 0.1133213952241672\n",
-            "MSE scores per fold denormalized: [3598147.758808856, 1401394.3333074462, 593071.7103568743, 331935.8391115441, 51581.76094445685]\n",
-            "Average MSE denormalized: 1195226.2805058355\n",
-            "Average RMSE denormalized: 28.956756547593198\n"
-          ]
-        }
-      ],
-      "source": [
-        "modeL_64_64 = build_model_64_64()\n",
-        "modeL_64_64 = train_model(modeL_64_64)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 79,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "7/7 [==============================] - 0s 647us/step\n",
-            "7/7 [==============================] - 0s 431us/step\n",
-            "7/7 [==============================] - 0s 450us/step\n",
-            "7/7 [==============================] - 0s 433us/step\n",
-            "7/7 [==============================] - 0s 446us/step\n",
-            "MSE scores per fold normalized: [0.0013119422666795723, 0.001168014017426567, 0.0016411668314494797, 0.0012422274683996104, 0.0012820575477329706]\n",
-            "Average MSE normalized: 0.00132908162633764\n",
-            "Average RMSE normalized: 0.19068425902438474\n",
-            "MSE scores per fold denormalized: [7523839.138258648, 6698429.135867881, 9411905.252626376, 7124034.574676393, 7352453.688970384]\n",
-            "Average MSE denormalized: 7622132.358079937\n",
-            "Average RMSE denormalized: 52.47422728393023\n"
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "7/7 [==============================] - 0s 1ms/step\n",
+            "MSE scores per fold normalized: [0.0003943105392221005, 0.0004114478049461689, 0.00010141128547494544, 6.439411282995394e-05, 3.6663754209227614e-05]\n",
+            "Average MSE normalized: 0.00020164549933647928\n",
+            "Average RMSE normalized: 0.11021672657826931\n",
+            "MSE scores per fold denormalized: [1609934.9474880327, 1679911.5495133768, 414055.2181651409, 262915.17635530693, 149695.55386241968]\n",
+            "Average MSE denormalized: 823302.4890768554\n",
+            "Average RMSE denormalized: 27.86058627430888\n"
           ]
         }
       ],
@@ -324,11 +296,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_data = pd.read_csv('data/memory_test_data.csv')\n",
+        "test_data = pd.read_csv('data/testing_data.csv')\n",
         "X_test, y_test_memory, y_test_time = data_preprocessing(test_data)\n",
         "\n",
         "X_test_normalized = features_scaler.transform(X_test.to_numpy())\n",
@@ -342,15 +314,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "4/4 [==============================] - 0s 729us/step\n",
-            "Test RMSE (normalized): 0.019080\n"
+            "5/5 [==============================] - 0s 2ms/step\n",
+            "Test RMSE (normalized): 0.020499\n"
           ]
         }
       ],
@@ -371,27 +343,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test RMSE (normalized): 0.019080\n",
-            "Test RMSE (denormalized): 1245.823172\n",
+            "Test RMSE (normalized): 0.020499\n",
+            "Test RMSE (denormalized): 1309.815920\n",
             "\n",
             "=== DIAGNOSTIC INFORMATION ===\n",
-            "Target scaler mean: 76030.07\n",
-            "Target scaler scale: 65294.43\n",
-            "Expected denormalized RMSE ≈ 1245.82\n",
+            "Target scaler mean: 70735.35\n",
+            "Target scaler scale: 63897.68\n",
+            "Expected denormalized RMSE ≈ 1309.82\n",
             "\n",
-            "Training target range: 26240.00 to 236352.00\n",
-            "Test target range: 26288.00 to 230032.00\n",
+            "Training target range: 25040.00 to 233504.00\n",
+            "Test target range: 25056.00 to 233600.00\n",
             "\n",
-            "Training target mean: 76030.07\n",
-            "Test target mean: 79943.74\n",
-            "Test data outside training range: False\n"
+            "Training target mean: 70735.35\n",
+            "Test target mean: 78808.64\n",
+            "Test data outside training range: True\n"
           ]
         }
       ],
@@ -434,38 +406,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Test RMSE (normalized): 0.019080\n",
-        "Test RMSE (denormalized): 1245.823172\n",
+        "Test RMSE (normalized): 0.020499\n",
+        "Test RMSE (denormalized): 1309.815920\n",
         "\n",
-        "Training average RMSE normalized: 0.19068425902438474\n",
-        "Training Average RMSE denormalized: 52.47422728393023"
+        "Training average RMSE normalized: 0.11021672657826931\n",
+        "Training Average RMSE denormalized: 27.86058627430888"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
         "def save_model(model, x_scaler, y_scaler):    \n",
-        "    model.save(\"model/memory_model.keras\")\n",
-        "    joblib.dump(x_scaler, \"model/scaler_x.pkl\")\n",
-        "    joblib.dump(y_scaler, \"model/scaler_y.pkl\")\n"
+        "    model.save(\"memory_model/memory_model.keras\")\n",
+        "    joblib.dump(x_scaler, \"memory_model/scaler_x.pkl\")\n",
+        "    joblib.dump(y_scaler, \"memory_model/scaler_y.pkl\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
